[gd_scene load_steps=64 format=2]

[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/states/motion/on_ground/idle.gd" type="Script" id=3]
[ext_resource path="res://characters/player/states/motion/on_ground/walk.gd" type="Script" id=4]
[ext_resource path="res://characters/player/states/motion/on_ground/dash.gd" type="Script" id=5]
[ext_resource path="res://characters/player/states/stagger.gd" type="Script" id=6]
[ext_resource path="res://characters/player/states/motion/on_ground/attack.gd" type="Script" id=7]
[ext_resource path="res://characters/player/states/die.gd" type="Script" id=8]
[ext_resource path="res://characters/player/states/dead.gd" type="Script" id=9]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_std00.png" type="Texture" id=10]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_dsh03.png" type="Texture" id=11]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_dsh04.png" type="Texture" id=12]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_dsh05.png" type="Texture" id=13]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_dsh00.png" type="Texture" id=14]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_dsh01.png" type="Texture" id=15]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_dsh02.png" type="Texture" id=16]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_los00.png" type="Texture" id=17]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_los01.png" type="Texture" id=18]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_los02.png" type="Texture" id=19]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_los03.png" type="Texture" id=20]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_los04.png" type="Texture" id=21]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_los05.png" type="Texture" id=22]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_std01.png" type="Texture" id=23]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_std02.png" type="Texture" id=24]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb00.png" type="Texture" id=25]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb01.png" type="Texture" id=26]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb02.png" type="Texture" id=27]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb03.png" type="Texture" id=28]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb04.png" type="Texture" id=29]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb05.png" type="Texture" id=30]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb06.png" type="Texture" id=31]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atkb07.png" type="Texture" id=32]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_sld00.png" type="Texture" id=33]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_sld01.png" type="Texture" id=34]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_sld02.png" type="Texture" id=35]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_sld03.png" type="Texture" id=36]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atka00.png" type="Texture" id=37]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atka01.png" type="Texture" id=38]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atka02.png" type="Texture" id=39]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atka03.png" type="Texture" id=40]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_atka04.png" type="Texture" id=41]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_bck00.png" type="Texture" id=42]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_bck01.png" type="Texture" id=43]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_bck02.png" type="Texture" id=44]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_fwd00.png" type="Texture" id=45]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_fwd01.png" type="Texture" id=46]
[ext_resource path="res://characters/player/star_breaker/sprites/sb_fwd02.png" type="Texture" id=47]
[ext_resource path="res://characters/player/star_breaker/weapon/weapon_pivot.gd" type="Script" id=48]
[ext_resource path="res://sfx/dash.ogg" type="AudioStream" id=49]
[ext_resource path="res://sfx/sprite_explode.ogg" type="AudioStream" id=50]

[sub_resource type="Animation" id=1]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.32052, -4.20115 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/Body:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyPivot/Body:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyPivot/Body:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "dash_backward"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 0.495474, 1.8756, 0.495474 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.233258, 1.85417 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 0.495474, 1.8756, 0.495474 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.233258, 1.85417 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 4.93821, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.812022, 1.23284 ), Vector2( 2.7717, 0.0452506 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DeathSound:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]

length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 23 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.331285 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.06, 0.08, 0.1, 0.16, 0.22, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=12]

resource_name = "walk_backward"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 0.495474, 1.8756, 0.495474 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.233258, 1.85417 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 43 ) ]
}

[sub_resource type="Animation" id=13]

length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.382302 ),
"transitions": PoolRealArray( 0.495474, 1.8756, 0.495474 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.233258, 1.85417 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.382302 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 46 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="StarBreaker" index="0" groups=[
"player",
] instance=ExtResource( 1 )]

script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility", "Z Index", "collision" ]

[node name="States" parent="." index="0"]

editor/display_folded = true

[node name="Idle" parent="States" index="0"]

script = ExtResource( 3 )

[node name="Walk" parent="States" index="1"]

script = ExtResource( 4 )

[node name="Dash" parent="States" index="2"]

script = ExtResource( 5 )
MAX_DASH_SPEED = 1100
particles_per_second = 6
BEGIN_DURATION = 0.1
BEGIN_SPEED = 1400

[node name="Stagger" parent="States" index="3"]

script = ExtResource( 6 )

[node name="Attack" parent="States" index="4"]

script = ExtResource( 7 )
primary_weapon_path = "res://characters/player/star_breaker/weapon/LaserSpawner.tscn"
secondary_weapon_path = "res://characters/player/star_breaker/weapon/StickyBombLauncher.tscn"
special_weapon_path = "res://characters/player/star_breaker/weapon/SpinWeapon.tscn"

[node name="Die" parent="States" index="5"]

script = ExtResource( 8 )

[node name="Dead" parent="States" index="6"]

script = ExtResource( 9 )

[node name="AnimationPlayer" parent="." index="1"]

anims/SETUP = SubResource( 1 )
anims/dash_backward = SubResource( 2 )
anims/dash_forward = SubResource( 3 )
anims/die = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/melee_1 = SubResource( 6 )
anims/melee_2 = SubResource( 7 )
anims/melee_3 = SubResource( 8 )
anims/primary_attack = SubResource( 9 )
anims/secondary_attack = SubResource( 10 )
anims/stagger = SubResource( 11 )
anims/walk_backward = SubResource( 12 )
anims/walk_forward = SubResource( 13 )

[node name="Health" parent="." index="3"]

max_health = 3000

[node name="CollisionShape2D" parent="." index="4"]

position = Vector2( 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="BodyPivot" parent="." index="5"]

editor/display_folded = true

[node name="Body" parent="BodyPivot" index="0"]

texture = ExtResource( 10 )
offset = Vector2( 0, 0 )
flip_h = true
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="WeaponPivot" parent="." index="6"]

editor/display_folded = true
position = Vector2( -3.67545, -53.7445 )
script = ExtResource( 48 )

[node name="SecondaryWeaponSpawn" parent="WeaponPivot" index="1"]

position = Vector2( 0, 0 )

[node name="PrimaryWeaponSpawn" parent="WeaponPivot" index="2"]

position = Vector2( 0, 0 )

[node name="Shadow" parent="." index="7"]

visible = false

[node name="DashSound" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 49 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="DeathSound" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 50 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="StatusPivot" parent="." index="10"]

editor/display_folded = true


